--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
   text-decoration: none;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -77,4 +78,39 @@ header {
 .summary {
   margin: 10px 0;
   line-height: 1.3rem;
+}
+
+.form-register,
+.form-login {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.form-register_input,
+.form-login_input {
+  display: block;
+  width: 100%;
+  margin-bottom: 14px;
+  padding: 6px;
+  border: 0;
+  border: 1px solid purple;
+  outline: none;
+  border-radius: 6px;
+}
+
+.form-register_button,
+.form-login_button {
+  width: 100%;
+  display: block;
+  padding: 8px 6px;
+  border-radius: 8px;
+  background-color: purple;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+}
+
+.form-login_title,
+.form-lregister_title {
+  margin-bottom: 16px;
 }
