--- a/client/src/App.css
+++ b/client/src/App.css
@@ -86,6 +86,16 @@ header {
   margin: 0 auto;
 }
 
+input {
+  display: block;
+  margin-bottom: 6px;
+  width: 100%;
+  padding: 6px;
+  border: 1px solid purple;
+  outline: none;
+  border-radius: 6px;
+}
+
 .form-register_input,
 .form-login_input {
   display: block;
